# huffman-rs

./: Cargo.toml  LICENSE  Readme.md
fixtures/: text.huff
src/: Readme.md  huffman.rs  io.rs  lib.rs  main.rs
